2007-06-28  Gary Thomas  <gary@mlbassoc.com>

	* src/tcdiag.cxx: 
	* src/diag.cxx: Add (char *) casts to make GCC 4.2.x happy.

2007-05-31  Rutger Hofman <rutger@cs.vu.nl>

	* src/diag.cxx: when printing a long long, should not truncate
	its value to a long or int size

2006-10-26  Stefan Sommerfeld <sommerfeld@mikrom.com>

	* include/cyg_types.h: fixed typo, __GNU_PATCHLEVEL__ was checked,
	should be __GNUC_PATCHLEVEL__ (which is already used later)
	* include/cyg_types.h: fixed comment for CYGBLD_ATTRIB_USED, wrong
	GCC version was referenced

2006-08-25  Gary Thomas  <gary@mlbassoc.com>

	* cdl/infra.cdl: 
	CYGNUM_INFRA_EMPTY_DELETE_THRESHOLD must be 'data', not 'boolean'

2006-05-17  David Vrabel <dvrabel@arcom.com>
 
	* include/cyg_type.h: #define CYG_NELEM to calculate the
 	number of elements in a (statically allocated) array.
 
2006-05-08  Sergei Gavrikov <sg@belvok.com>
	
	* src/buffer.cxx: Fix the compiler warnings.

2005-11-04  Bart Veer <bartv@ecoscentric.com>
	
	* tests/cxxsupp.cxx: Fix the compiler warnings.

2005-10-16  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/delete.cxx: 
	* cdl/infra.cdl: Count the number of calls to delete when
	INFRA_DEBUG is enabled. If the threshold is exceeded it probably
	means the user expects a real delete function, not the empty one.
	
2005-10-12  Laurent Gonzalez  <laurent.gonzalez@trango-systems.com>

	* src/simple.cxx (cyg_check_func_ptr): match the implementation to
	the prototype. This got forgotten in the last patch.
	
2005-07-29  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/cyg_ass.h: Fixed a function prototype so that
	gcc4 does not give warnings. A const void makes no sense.
	* src/*.cxx (cyg_check_func_ptr): match the implementation to the
	prototype.

2005-06-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/cyg_type.h: Added CYGBLD_ATTRIB_USED so that we can
	indicate to gcc 3.4.4 or above not to throw away a variable or
	function even when it appears to be not references.
	